--- a/src/components/SiteChrome.css
+++ b/src/components/SiteChrome.css
@@ -45,7 +45,7 @@ body.rose-white .sc-footer {
 .sc-hdr-in {
   display: flex;
   align-items: center;
-  padding: 12px 0;
+  padding: 7px 0;
 }
 .sc-logo-wrap {
   margin-right: auto;
@@ -54,7 +54,7 @@ body.rose-white .sc-footer {
 .sc-brand-logo {
   display: inline-block;
   position: relative;
-  max-width: 170px;
+  max-width: 128px;
   margin-right: 1.042vw;
   padding: 0;
   border: 0;
@@ -64,7 +64,8 @@ body.rose-white .sc-footer {
 }
 .sc-logo-img {
   display: block;
-  width: 100%;
+  height: 30px;
+  width: auto;
   transition: opacity 0.5s ease-in-out;
 }
 .sc-logo-img.red {
